# embedding-data

./: .gitignore  docker-compose.yml  pyproject.toml
examples/: semantic_search_example.py
src/: config.py  database.py  elastic_repo.py  embedding.py  lexical_search.py  main.py  milvus_repo.py  models.py  postgres_repo.py  seed_milvus.py  seed_postgres.py  semantic_search.py
